src/parser.output
Rules useless in parser due to conflicts

   31 unary: T_NUMVAL


State 31 conflicts: 3 reduce/reduce
State 34 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 55 conflicts: 3 reduce/reduce
State 58 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: multiFunction

    2 multiFunction: defFunction
    3              | multiFunction defFunction

    4 defFunction: dataType T_IDENTIFIER '(' ')' '{' codeBody '}'
    5            | dataType T_IDENTIFIER '(' funcParamList ')' '{' codeBody '}'

    6 funcParamList: funcParam
    7              | funcParamList ',' funcParam

    8 funcParam: dataType T_IDENTIFIER
    9          | dataType '*' T_IDENTIFIER

   10 codeBody: statement
   11         | codeBody statement

   12 statement: declaration
   13          | T_IDENTIFIER '=' expression ';'
   14          | keyword
   15          | loop

   16 loop: T_WHILE '(' expression ')' '{' codeBody '}'
   17     | T_WHILE '(' expression ')'

   18 declaration: dataType T_IDENTIFIER ';'
   19            | dataType T_IDENTIFIER '=' expression ';'

   20 dataType: T_INT

   21 keyword: T_RETURN expression ';'

   22 expression: T_NUMVAL
   23           | funcCall
   24           | operation

   25 funcCall: dataType T_IDENTIFIER '(' ')'
   26         | dataType T_IDENTIFIER '(' funcParamList ')'

   27 operation: operation '+' term
   28          | term

   29 term: unary
   30     | expression

   31 unary: T_NUMVAL
   32      | T_IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 5 16 17 25 26
    ')' (41) 4 5 16 17 25 26
    '*' (42) 9
    '+' (43) 27
    ',' (44) 7
    ';' (59) 13 18 19 21
    '=' (61) 13 19
    '{' (123) 4 5 16
    '}' (125) 4 5 16
    error (256)
    T_NUMVAL <integer> (258) 22 31
    T_INT (259) 20
    T_RETURN (260) 21
    T_IDENTIFIER <string> (261) 4 5 8 9 13 18 19 25 26 32
    T_WHILE (262) 16 17


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    program <ASTnode> (18)
        on left: 1
        on right: 0
    multiFunction <ASTnode> (19)
        on left: 2 3
        on right: 1 3
    defFunction <ASTnode> (20)
        on left: 4 5
        on right: 2 3
    funcParamList <ASTnode> (21)
        on left: 6 7
        on right: 5 7 26
    funcParam <ASTnode> (22)
        on left: 8 9
        on right: 6 7
    codeBody <ASTnode> (23)
        on left: 10 11
        on right: 4 5 11 16
    statement <ASTnode> (24)
        on left: 12 13 14 15
        on right: 10 11
    loop <ASTnode> (25)
        on left: 16 17
        on right: 15
    declaration <ASTnode> (26)
        on left: 18 19
        on right: 12
    dataType <string> (27)
        on left: 20
        on right: 4 5 8 9 18 19 25 26
    keyword <ASTnode> (28)
        on left: 21
        on right: 14
    expression <ASTnode> (29)
        on left: 22 23 24
        on right: 13 16 17 19 21 30
    funcCall <ASTnode> (30)
        on left: 25 26
        on right: 23
    operation <ASTnode> (31)
        on left: 27 28
        on right: 24 27
    term <ASTnode> (32)
        on left: 29 30
        on right: 27 28
    unary <ASTnode> (33)
        on left: 31 32
        on right: 29


State 0

    0 $accept: . program $end

    T_INT  shift, and go to state 1

    program        go to state 2
    multiFunction  go to state 3
    defFunction    go to state 4
    dataType       go to state 5


State 1

   20 dataType: T_INT .

    $default  reduce using rule 20 (dataType)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: multiFunction .
    3 multiFunction: multiFunction . defFunction

    T_INT  shift, and go to state 1

    $default  reduce using rule 1 (program)

    defFunction  go to state 7
    dataType     go to state 5


State 4

    2 multiFunction: defFunction .

    $default  reduce using rule 2 (multiFunction)


State 5

    4 defFunction: dataType . T_IDENTIFIER '(' ')' '{' codeBody '}'
    5            | dataType . T_IDENTIFIER '(' funcParamList ')' '{' codeBody '}'

    T_IDENTIFIER  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 multiFunction: multiFunction defFunction .

    $default  reduce using rule 3 (multiFunction)


State 8

    4 defFunction: dataType T_IDENTIFIER . '(' ')' '{' codeBody '}'
    5            | dataType T_IDENTIFIER . '(' funcParamList ')' '{' codeBody '}'

    '('  shift, and go to state 9


State 9

    4 defFunction: dataType T_IDENTIFIER '(' . ')' '{' codeBody '}'
    5            | dataType T_IDENTIFIER '(' . funcParamList ')' '{' codeBody '}'

    T_INT  shift, and go to state 1
    ')'    shift, and go to state 10

    funcParamList  go to state 11
    funcParam      go to state 12
    dataType       go to state 13


State 10

    4 defFunction: dataType T_IDENTIFIER '(' ')' . '{' codeBody '}'

    '{'  shift, and go to state 14


State 11

    5 defFunction: dataType T_IDENTIFIER '(' funcParamList . ')' '{' codeBody '}'
    7 funcParamList: funcParamList . ',' funcParam

    ')'  shift, and go to state 15
    ','  shift, and go to state 16


State 12

    6 funcParamList: funcParam .

    $default  reduce using rule 6 (funcParamList)


State 13

    8 funcParam: dataType . T_IDENTIFIER
    9          | dataType . '*' T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 17
    '*'           shift, and go to state 18


State 14

    4 defFunction: dataType T_IDENTIFIER '(' ')' '{' . codeBody '}'

    T_INT         shift, and go to state 1
    T_RETURN      shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    T_WHILE       shift, and go to state 21

    codeBody     go to state 22
    statement    go to state 23
    loop         go to state 24
    declaration  go to state 25
    dataType     go to state 26
    keyword      go to state 27


State 15

    5 defFunction: dataType T_IDENTIFIER '(' funcParamList ')' . '{' codeBody '}'

    '{'  shift, and go to state 28


State 16

    7 funcParamList: funcParamList ',' . funcParam

    T_INT  shift, and go to state 1

    funcParam  go to state 29
    dataType   go to state 13


State 17

    8 funcParam: dataType T_IDENTIFIER .

    $default  reduce using rule 8 (funcParam)


State 18

    9 funcParam: dataType '*' . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 30


State 19

   21 keyword: T_RETURN . expression ';'

    T_NUMVAL      shift, and go to state 31
    T_INT         shift, and go to state 1
    T_IDENTIFIER  shift, and go to state 32

    dataType    go to state 33
    expression  go to state 34
    funcCall    go to state 35
    operation   go to state 36
    term        go to state 37
    unary       go to state 38


State 20

   13 statement: T_IDENTIFIER . '=' expression ';'

    '='  shift, and go to state 39


State 21

   16 loop: T_WHILE . '(' expression ')' '{' codeBody '}'
   17     | T_WHILE . '(' expression ')'

    '('  shift, and go to state 40


State 22

    4 defFunction: dataType T_IDENTIFIER '(' ')' '{' codeBody . '}'
   11 codeBody: codeBody . statement

    T_INT         shift, and go to state 1
    T_RETURN      shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    T_WHILE       shift, and go to state 21
    '}'           shift, and go to state 41

    statement    go to state 42
    loop         go to state 24
    declaration  go to state 25
    dataType     go to state 26
    keyword      go to state 27


State 23

   10 codeBody: statement .

    $default  reduce using rule 10 (codeBody)


State 24

   15 statement: loop .

    $default  reduce using rule 15 (statement)


State 25

   12 statement: declaration .

    $default  reduce using rule 12 (statement)


State 26

   18 declaration: dataType . T_IDENTIFIER ';'
   19            | dataType . T_IDENTIFIER '=' expression ';'

    T_IDENTIFIER  shift, and go to state 43


State 27

   14 statement: keyword .

    $default  reduce using rule 14 (statement)


State 28

    5 defFunction: dataType T_IDENTIFIER '(' funcParamList ')' '{' . codeBody '}'

    T_INT         shift, and go to state 1
    T_RETURN      shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    T_WHILE       shift, and go to state 21

    codeBody     go to state 44
    statement    go to state 23
    loop         go to state 24
    declaration  go to state 25
    dataType     go to state 26
    keyword      go to state 27


State 29

    7 funcParamList: funcParamList ',' funcParam .

    $default  reduce using rule 7 (funcParamList)


State 30

    9 funcParam: dataType '*' T_IDENTIFIER .

    $default  reduce using rule 9 (funcParam)


State 31

   22 expression: T_NUMVAL .
   31 unary: T_NUMVAL .

    ')'       reduce using rule 22 (expression)
    ')'       [reduce using rule 31 (unary)]
    ';'       reduce using rule 22 (expression)
    ';'       [reduce using rule 31 (unary)]
    '+'       reduce using rule 22 (expression)
    '+'       [reduce using rule 31 (unary)]
    $default  reduce using rule 22 (expression)


State 32

   32 unary: T_IDENTIFIER .

    $default  reduce using rule 32 (unary)


State 33

   25 funcCall: dataType . T_IDENTIFIER '(' ')'
   26         | dataType . T_IDENTIFIER '(' funcParamList ')'

    T_IDENTIFIER  shift, and go to state 45


State 34

   21 keyword: T_RETURN expression . ';'
   30 term: expression .

    ';'  shift, and go to state 46

    ';'       [reduce using rule 30 (term)]
    $default  reduce using rule 30 (term)


State 35

   23 expression: funcCall .

    $default  reduce using rule 23 (expression)


State 36

   24 expression: operation .
   27 operation: operation . '+' term

    '+'  shift, and go to state 47

    '+'       [reduce using rule 24 (expression)]
    $default  reduce using rule 24 (expression)


State 37

   28 operation: term .

    $default  reduce using rule 28 (operation)


State 38

   29 term: unary .

    $default  reduce using rule 29 (term)


State 39

   13 statement: T_IDENTIFIER '=' . expression ';'

    T_NUMVAL      shift, and go to state 31
    T_INT         shift, and go to state 1
    T_IDENTIFIER  shift, and go to state 32

    dataType    go to state 33
    expression  go to state 48
    funcCall    go to state 35
    operation   go to state 36
    term        go to state 37
    unary       go to state 38


State 40

   16 loop: T_WHILE '(' . expression ')' '{' codeBody '}'
   17     | T_WHILE '(' . expression ')'

    T_NUMVAL      shift, and go to state 31
    T_INT         shift, and go to state 1
    T_IDENTIFIER  shift, and go to state 32

    dataType    go to state 33
    expression  go to state 49
    funcCall    go to state 35
    operation   go to state 36
    term        go to state 37
    unary       go to state 38


State 41

    4 defFunction: dataType T_IDENTIFIER '(' ')' '{' codeBody '}' .

    $default  reduce using rule 4 (defFunction)


State 42

   11 codeBody: codeBody statement .

    $default  reduce using rule 11 (codeBody)


State 43

   18 declaration: dataType T_IDENTIFIER . ';'
   19            | dataType T_IDENTIFIER . '=' expression ';'

    '='  shift, and go to state 50
    ';'  shift, and go to state 51


State 44

    5 defFunction: dataType T_IDENTIFIER '(' funcParamList ')' '{' codeBody . '}'
   11 codeBody: codeBody . statement

    T_INT         shift, and go to state 1
    T_RETURN      shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    T_WHILE       shift, and go to state 21
    '}'           shift, and go to state 52

    statement    go to state 42
    loop         go to state 24
    declaration  go to state 25
    dataType     go to state 26
    keyword      go to state 27


State 45

   25 funcCall: dataType T_IDENTIFIER . '(' ')'
   26         | dataType T_IDENTIFIER . '(' funcParamList ')'

    '('  shift, and go to state 53


State 46

   21 keyword: T_RETURN expression ';' .

    $default  reduce using rule 21 (keyword)


State 47

   27 operation: operation '+' . term

    T_NUMVAL      shift, and go to state 31
    T_INT         shift, and go to state 1
    T_IDENTIFIER  shift, and go to state 32

    dataType    go to state 33
    expression  go to state 54
    funcCall    go to state 35
    operation   go to state 36
    term        go to state 55
    unary       go to state 38


State 48

   13 statement: T_IDENTIFIER '=' expression . ';'
   30 term: expression .

    ';'  shift, and go to state 56

    ';'       [reduce using rule 30 (term)]
    $default  reduce using rule 30 (term)


State 49

   16 loop: T_WHILE '(' expression . ')' '{' codeBody '}'
   17     | T_WHILE '(' expression . ')'
   30 term: expression .

    ')'  shift, and go to state 57

    ')'       [reduce using rule 30 (term)]
    $default  reduce using rule 30 (term)


State 50

   19 declaration: dataType T_IDENTIFIER '=' . expression ';'

    T_NUMVAL      shift, and go to state 31
    T_INT         shift, and go to state 1
    T_IDENTIFIER  shift, and go to state 32

    dataType    go to state 33
    expression  go to state 58
    funcCall    go to state 35
    operation   go to state 36
    term        go to state 37
    unary       go to state 38


State 51

   18 declaration: dataType T_IDENTIFIER ';' .

    $default  reduce using rule 18 (declaration)


State 52

    5 defFunction: dataType T_IDENTIFIER '(' funcParamList ')' '{' codeBody '}' .

    $default  reduce using rule 5 (defFunction)


State 53

   25 funcCall: dataType T_IDENTIFIER '(' . ')'
   26         | dataType T_IDENTIFIER '(' . funcParamList ')'

    T_INT  shift, and go to state 1
    ')'    shift, and go to state 59

    funcParamList  go to state 60
    funcParam      go to state 12
    dataType       go to state 13


State 54

   30 term: expression .

    $default  reduce using rule 30 (term)


State 55

   27 operation: operation '+' term .
   28          | term .

    ')'       reduce using rule 27 (operation)
    ')'       [reduce using rule 28 (operation)]
    ';'       reduce using rule 27 (operation)
    ';'       [reduce using rule 28 (operation)]
    '+'       reduce using rule 27 (operation)
    '+'       [reduce using rule 28 (operation)]
    $default  reduce using rule 27 (operation)


State 56

   13 statement: T_IDENTIFIER '=' expression ';' .

    $default  reduce using rule 13 (statement)


State 57

   16 loop: T_WHILE '(' expression ')' . '{' codeBody '}'
   17     | T_WHILE '(' expression ')' .

    '{'  shift, and go to state 61

    $default  reduce using rule 17 (loop)


State 58

   19 declaration: dataType T_IDENTIFIER '=' expression . ';'
   30 term: expression .

    ';'  shift, and go to state 62

    ';'       [reduce using rule 30 (term)]
    $default  reduce using rule 30 (term)


State 59

   25 funcCall: dataType T_IDENTIFIER '(' ')' .

    $default  reduce using rule 25 (funcCall)


State 60

    7 funcParamList: funcParamList . ',' funcParam
   26 funcCall: dataType T_IDENTIFIER '(' funcParamList . ')'

    ')'  shift, and go to state 63
    ','  shift, and go to state 16


State 61

   16 loop: T_WHILE '(' expression ')' '{' . codeBody '}'

    T_INT         shift, and go to state 1
    T_RETURN      shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    T_WHILE       shift, and go to state 21

    codeBody     go to state 64
    statement    go to state 23
    loop         go to state 24
    declaration  go to state 25
    dataType     go to state 26
    keyword      go to state 27


State 62

   19 declaration: dataType T_IDENTIFIER '=' expression ';' .

    $default  reduce using rule 19 (declaration)


State 63

   26 funcCall: dataType T_IDENTIFIER '(' funcParamList ')' .

    $default  reduce using rule 26 (funcCall)


State 64

   11 codeBody: codeBody . statement
   16 loop: T_WHILE '(' expression ')' '{' codeBody . '}'

    T_INT         shift, and go to state 1
    T_RETURN      shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    T_WHILE       shift, and go to state 21
    '}'           shift, and go to state 65

    statement    go to state 42
    loop         go to state 24
    declaration  go to state 25
    dataType     go to state 26
    keyword      go to state 27


State 65

   16 loop: T_WHILE '(' expression ')' '{' codeBody '}' .

    $default  reduce using rule 16 (loop)
